--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,4 +10,13 @@ jobs:
        - name: just printing
          run: echo "This is my first github action"
 
+  test:
+    runs-on: ubuntu-latest
+    steps:
+       - name: checkout repository
+         uses: actions/checkout@v4
+
+       - name: just printing
+         run: echo "This is 2nd job"
+
     
