--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
          run: echo "This is new file" > sandy.txt
 
        - name: upload it as artifact
-         uses: actions/upload-artifact@4
+         uses: actions/upload-artifact@v4
          with:
            name: sandy
            path: sandy.txt
@@ -32,7 +32,7 @@ jobs:
          run: echo "This is 2nd job"
 
        - name: download artifact
-         uses: actions/download-artifact@4
+         uses: actions/download-artifact@v4
          with:
            name: sandy
 
