Add comment for alternative runner options
Commented out alternative runner options for clarity.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ on: [push, workflow_dispatch]
 jobs:
   build:
      runs-on: ubuntu-latest
+     #runs-on: [self-hosted, Intela] or runs-on: Intela
      steps:
        - name: checkout repository
          uses: actions/checkout@v4
